--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,75 +11,89 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.Id" hidden />
-            <div class="border p-3 mt-4">
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Title" class="form-control border-3 shadow" placeholder="Name"/>
-                    <label asp-for="Product.Title" class="ms-2"></label>
-                    <span asp-validation-for="Product.Title" class="text-danger"></span>
+            <div class="row">
+                <div class="col-10">
+                    <div class="border p-3 mt-4">
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.Title" class="form-control border-3 shadow" placeholder="Name" />
+                            <label asp-for="Product.Title" class="ms-2"></label>
+                            <span asp-validation-for="Product.Title" class="text-danger"></span>
+                        </div>
+                        <div class="py-2 col-12">
+                            <label asp-for="Product.Description" class="ms-2 text-muted"></label>
+                            <textarea asp-for="Product.Description" class="form-control form-control border-3 shadow"></textarea>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.ISBN" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.ISBN" class="ms-2"></label>
+                            <span asp-validation-for="Product.ISBN" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.Author" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.Author" class="ms-2"></label>
+                            <span asp-validation-for="Product.Author" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.ListPrice" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.ListPrice" class="ms-2"></label>
+                            <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.Price" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.Price" class="ms-2"></label>
+                            <span asp-validation-for="Product.Price" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.Price50" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.Price50" class="ms-2"></label>
+                            <span asp-validation-for="Product.Price50" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input asp-for="Product.Price100" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.Price100" class="ms-2"></label>
+                            <span asp-validation-for="Product.Price100" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <select asp-for="@Model.Product.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
+                                <option disabled selected>--Select Category--</option>
+                            </select>
+                            <label asp-for="Product.CategoryId" class="ms-2"></label>
+                            <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
+                        </div>
+                        <div class="form-floating py-2 col-12">
+                            <input type="file" name="file" class="form-control form-control border-3 shadow" />
+                            <label asp-for="Product.ImageUrl" class="ms-2"></label>
+                        </div>
+                        @if (Model.Product.Id != 0)
+                        {
+                            <button type="submit" class="btn btn-primary" style="widht:150px">Update</button>
+                        }
+                        else
+                        {
+                            <button type="submit" class="btn btn-primary" style="widht:150px">Create</button>
+                        }
+                        <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="widht:150px">
+                            Back to list
+                        </a>
+                    </div>
                 </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Description" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.Description" class="ms-2"></label>
-                    <span asp-validation-for="Product.Description" class="text-danger"></span>
+                <div class="col-2">
+                    <img src="@Model.Product.ImageUrl" alt="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border solid #bbb9b9" />
                 </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.ISBN" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.ISBN" class="ms-2"></label>
-                    <span asp-validation-for="Product.ISBN" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Author" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.Author" class="ms-2"></label>
-                    <span asp-validation-for="Product.Author" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.ListPrice" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.ListPrice" class="ms-2"></label>
-                    <span asp-validation-for="Product.ListPrice" class="text-danger"></span>
-                </div>
-                                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Price" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.Price" class="ms-2"></label>
-                    <span asp-validation-for="Product.Price" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Price50" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.Price50" class="ms-2"></label>
-                    <span asp-validation-for="Product.Price50" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input asp-for="Product.Price100" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.Price100" class="ms-2"></label>
-                    <span asp-validation-for="Product.Price100" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <select asp-for="@Model.Product.CategoryId" asp-items="@Model.CategoryList" class="form-select border-0 shadow">
-                      <option disabled selected>--Select Category--</option>
-                    </select>
-                    <label asp-for="Product.CategoryId" class="ms-2"></label>
-                    <span asp-validation-for="Product.CategoryId" class="text-danger"></span>
-                </div>
-                <div class="form-floating py-2 col-12">
-                    <input type="file" class="form-control form-control border-3 shadow" />
-                    <label asp-for="Product.ImageUrl" class="ms-2"></label>
-                </div>
-                @if(Model.Product.Id != 0 )
-                {
-                    <button type="submit" class="btn btn-primary" style="widht:150px">Update</button>
-                }
-                else
-                {
-                    <button type="submit" class="btn btn-primary" style="widht:150px">Create</button>
-                }
-                <a asp-controller="Product" asp-action="Index" class="btn btn-secondary" style="widht:150px">
-                    Back to list
-                </a>
             </div>
         </form>
     </div>
 </div>
 @section Scripts
 {
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons   lists   table visualblocks wordcount ',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough  | spellcheckdialog a11ycheck typography | align lineheight | checklist numlist bullist indent outdent ',
+        });
+    </script>
+
     @{
         <partial name="_ValidationScriptsPartial"/>
     }
