--- a/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/Bulky/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -57,6 +57,7 @@
             &copy; 2022 - BulkyBookBookWeb - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="https://cdn.tiny.cloud/1/e57gl5jqc78snegq2x95r1222om9t3nyhpe2jgatrx3xk9u8/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
