--- a/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/Bulky/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -45,10 +45,7 @@
                             @obj.Author
                         </td>
                          <td>
-                            @obj.ISBN
-                        </td>
-                        <td>
-                            
+                            @obj.Category.Name
                         </td>
                         <td>
                             <div class="w-75 btn-group" role="group">
